testsuite/tests/letrec-disallowed/pr7231.ocaml.reference
Characters 84-90:
  let rec r = let rec x () = r and y () = x () in y () in r "oops";; 
                                                            ^^^^^^
Warning 20: this argument will not be used by the function.
Characters 38-78:
  let rec r = let rec x () = r and y () = x () in y () in r "oops";; 
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This kind of expression is not allowed as right-hand side of `let rec'

